# SimuDesafio

./: .gitignore  README.md
sfml/: CMakeLists.txt
sfml/resources/: dificil.txt  dificil2.txt  facil.txt  map.txt  medio.txt  muyDificil.txt
sfml/src/: HexCell.hpp  MapLoader.cpp  MapLoader.hpp  Utils.cpp  Utils.hpp  main.cpp
sfml/src/core/: AutoMovement.cpp  AutoMovement.hpp  GameLogic.cpp  GameLogic.hpp  GameManager.cpp  GameManager.hpp  PathFinding.cpp  PathFinding.hpp  TurnSystem.cpp  TurnSystem.hpp
sfml/src/model/: HexCell.hpp  HexGrid.cpp  HexGrid.hpp  Player.cpp  Player.hpp
sfml/src/render/: EffectsRenderer.cpp  EffectsRenderer.hpp  HexRenderer.cpp  HexRenderer.hpp  IntroScreen.cpp  IntroScreen.hpp  Renderer.cpp  Renderer.hpp  ScreenRenderer.cpp  ScreenRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
sfml/src/utils/: MapLoader.cpp  MapLoader.hpp  MapSelector.cpp  MapSelector.hpp  Utils.cpp  Utils.hpp
